--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% block  content %}
     <div class="row">
         <div class="card-footer text-muted text-center">
-            New to Django Boards? <a href="{% url 'signup' %}">Sign up</a>
+            New to Bookstore? <a href="{% url 'signup' %}">Sign up</a>
         </div>
 
         <h2>Login</h2>
