--- a/app/books/templates/books/book_list.html
+++ b/app/books/templates/books/book_list.html
@@ -12,22 +12,24 @@
         </tr>
         </thead>
         <tbody>
-        {% for book in book_list %}
-            <tr>
-                <td>
-                    <a href="{{ book.get_absolute_url }}">{{ book.isbn }}</a>
-                </td>
-                <td>
-                    {{ book.title }}
-                </td>
-                <td>
-                    {{ book.publisher }}
-                </td>
-                <td>
-                    {{ book.author }}
-                </td>
-            </tr>
-        {% endfor %}
+        {% if book_list %}
+            {% for book in book_list %}
+                <tr>
+                    <td>
+                        <a href="{{ book.get_absolute_url }}">{{ book.isbn }}</a>
+                    </td>
+                    <td>
+                        {{ book.title }}
+                    </td>
+                    <td>
+                        {{ book.publisher }}
+                    </td>
+                    <td>
+                        {{ book.author }}
+                    </td>
+                </tr>
+            {% endfor %}
+        {% endif %}
         <tr>
             <td colspan="6"><a href="{% url 'books:book_create' %}">Add new book</a></td>
         </tr>
